--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Nathan Vos</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">Statistician and Data Scientist</h2>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h3>
+<a id="a-little-about-me" class="anchor" href="#a-little-about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>A little about me</h3>
 
-<p>My site's in construction at the moment. Things will be up and running soon!</p>
+<p>I enjoy creating, learning, laughing, and asking questions. I'm fascinated by the unlimited potential of data today and am passionate about discovering new data-driven insights through the use of machine learning tools and proper statistical techniques. I'm looking forward to solving complex problems for a company keen on making well-informed decisions from big data.</p>
+
+<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm <strong>definitely</strong> no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to found a racing league for a water slide analogue of the luge (perfect for the summer Olympics!) and my current more attainable goal is learning the guitar.</p>
+
+<h3>
+<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
 
       <footer class="site-footer">
 
