--- a/index.html
+++ b/index.html
@@ -17,14 +17,45 @@
 
     <section class="main-content">
       <h3>
-<a id="a-little-about-me" class="anchor" href="#a-little-about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>A little about me</h3>
+<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</h3>
 
-<p>I enjoy creating, learning, laughing, and asking questions. I'm fascinated by the unlimited potential of data today and am passionate about discovering new data-driven insights through the use of machine learning tools and proper statistical techniques. I'm looking forward to solving complex problems for a company keen on making well-informed decisions from big data.</p>
+<p>I enjoy creating, learning, connecting, and asking questions. I'm fascinated by the unlimited potential of data today and am passionate about discovering new data-driven insights through the use of machine learning tools and proper statistical techniques. I'm looking forward to solving complex problems for a company keen on making well-informed decisions from big data.</p>
 
-<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm <strong>definitely</strong> no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to found a racing league for a water slide analogue of the luge (perfect for the summer Olympics!) and my current more attainable goal is learning the guitar.</p>
+<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm <strong>definitely</strong> no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to create a water slide racing league (similar to the luge, perfect for the summer Olympics!) and my current, more attainable goal is learning to play the guitar beyond Smoke on the Water.</p>
+
+<hr>
 
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
+
+<p>I'll be posting projects I've worked on and am working on from time to time on my github, but I'll also summarize a couple interesting ones here.</p>
+
+<h4>
+<a id="correlation-in-fantasy-football-masters-thesis" class="anchor" href="#correlation-in-fantasy-football-masters-thesis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Correlation in Fantasy Football (Master's Thesis)</h4>
+
+<ul>
+<li><p>Obtained game data from 2009-14 from nfl.com using Andrew Gallant's nflgame API and formatted it for analysis in R</p></li>
+<li><p>Developed basic parametric assumptions concerning the estimation of fantasy point correlations of NFL players by position, which allowed for inference on these correlations</p></li>
+<li><p>Analyzed and demonstrated how the results can be utilized in both season-long and weekly fantasy leagues</p></li>
+</ul>
+
+<h4>
+<a id="classifying-handwritten-digits" class="anchor" href="#classifying-handwritten-digits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Classifying Handwritten Digits</h4>
+
+<ul>
+<li><p>Implemented a number of algorithms in both R and Python to classify digits in the MNIST handwritten digits data set</p></li>
+<li><p>Algorithms included: PCA, k-means, Fisher's discriminant analysis, logistic regression, SGD, SVM, and mixture models (via the EM algorithm)</p></li>
+<li><p>Achieved 9 % test error rate using SVM and 11 % using logistic regression</p></li>
+</ul>
+
+<h4>
+<a id="binary-star-system-classification" class="anchor" href="#binary-star-system-classification" aria-hidden="true"><span class="octicon octicon-link"></span></a>Binary Star System Classification</h4>
+
+<ul>
+<li><p>Analyzed 24 GB of Hubble Telescope light flux data for over 150,000 star systems using PySpark</p></li>
+<li><p>Fit a non-parametric regression to each star system's light curve using Gaussian and Epanechnikov kernels (bandwidth selected via LOOCV) to produce residual light readings</p></li>
+<li><p>Identified potential binary star systems by detecting systematic trends in the residual light readings </p></li>
+</ul>
 
       <footer class="site-footer">
 
