Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     </section>
 
     <section class="main-content">
-      <h3>
+      <p>Welcome! I created this site to showcase some of my past and present projects. I'll be updating this page and my github from time to time.</p>
+
+<h3>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</h3>
 
 <p>I enjoy creating, learning, connecting, and asking questions. I'm fascinated by the unlimited potential of data today and am passionate about discovering new data-driven insights through the use of machine learning tools and proper statistical techniques. I'm looking forward to solving complex problems for a company keen on making well-informed decisions from big data.</p>
 
-<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm <strong>definitely</strong> no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to create a water slide racing league (similar to the luge, perfect for the summer Olympics!) and my current, more attainable goal is learning to play the guitar beyond Smoke on the Water.</p>
+<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm <strong>definitely</strong> no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to create a water slide racing league (similar to the luge-perfect for the summer Olympics!) and my current, more attainable goal is learning to play the guitar beyond Smoke on the Water.</p>
 
 <hr>
 
@@ -56,6 +58,11 @@
 <li><p>Fit a non-parametric regression to each star system's light curve using Gaussian and Epanechnikov kernels (bandwidth selected via LOOCV) to produce residual light readings</p></li>
 <li><p>Identified potential binary star systems by detecting systematic trends in the residual light readings </p></li>
 </ul>
+
+<h3>
+<a id="thanks" class="anchor" href="#thanks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Thanks!</h3>
+
+<p>I appreciate your visit and hope you'll check my site out in the future!</p>
 
       <footer class="site-footer">
 
