--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <p>I enjoy creating, learning, connecting, and asking questions. I'm fascinated by the unlimited potential of data today and am passionate about discovering new data-driven insights through the use of machine learning tools and proper statistical techniques. I'm looking forward to solving complex problems for a company keen on making well-informed decisions from big data.</p>
 
-<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm <strong>definitely</strong> no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to create a water slide racing league (similar to the luge-perfect for the summer Olympics!) and my current, more attainable goal is learning to play the guitar beyond Smoke on the Water.</p>
+<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to create a water slide racing league (similar to the luge, and perfect for the summer Olympics!) and my current, more attainable goal is learning to play the guitar beyond Smoke on the Water.</p>
 
 <hr>
 
@@ -36,7 +36,7 @@
 <a id="correlation-in-fantasy-football-masters-thesis" class="anchor" href="#correlation-in-fantasy-football-masters-thesis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Correlation in Fantasy Football (Master's Thesis)</h4>
 
 <ul>
-<li><p>Obtained game data from 2009-14 from nfl.com using Andrew Gallant's nflgame API and formatted it for analysis in R</p></li>
+<li><p>Obtained game data from 2009-13 from nfl.com using Andrew Gallant's nflgame API and formatted it for analysis in R</p></li>
 <li><p>Developed basic parametric assumptions concerning the estimation of fantasy point correlations of NFL players by position, which allowed for inference on these correlations</p></li>
 <li><p>Analyzed and demonstrated how the results can be utilized in both season-long and weekly fantasy leagues</p></li>
 </ul>
@@ -59,10 +59,12 @@
 <li><p>Identified potential binary star systems by detecting systematic trends in the residual light readings </p></li>
 </ul>
 
+<hr>
+
 <h3>
 <a id="thanks" class="anchor" href="#thanks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Thanks!</h3>
 
-<p>I appreciate your visit and hope you'll check my site out in the future!</p>
+<p>I appreciate your visit and hope you'll return!</p>
 
       <footer class="site-footer">
 
