--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     </section>
 
     <section class="main-content">
-      <p>Welcome! I created this site to showcase some of my past and present projects. I'll be updating this page and my github from time to time.</p>
+      <p>Welcome! I created this site to showcase some of my past and present projects. I'll be updating this page and my github from time to time with new ones.</p>
 
 <h3>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</h3>
 
 <p>I enjoy creating, learning, connecting, and asking questions. I'm fascinated by the unlimited potential of data today and am passionate about discovering new data-driven insights through the use of machine learning tools and proper statistical techniques. I'm looking forward to solving complex problems for a company keen on making well-informed decisions from big data.</p>
 
-<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to create a water slide racing league (similar to the luge, and perfect for the summer Olympics!) and my current, more attainable goal is learning to play the guitar beyond Smoke on the Water.</p>
+<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm certainly no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to create a water slide racing league (similar to the luge, and perfect for the summer Olympics!) and my current, more attainable goal is learning to play the guitar beyond Smoke on the Water.</p>
 
 <hr>
 
@@ -47,7 +47,7 @@
 <ul>
 <li><p>Implemented a number of algorithms in both R and Python to classify digits in the MNIST handwritten digits data set</p></li>
 <li><p>Algorithms included: PCA, k-means, Fisher's discriminant analysis, logistic regression, SGD, SVM, and mixture models (via the EM algorithm)</p></li>
-<li><p>Achieved 9 % test error rate using SVM and 11 % using logistic regression</p></li>
+<li><p>Achieved 9 % testing error rate using SVM and 11 % using logistic regression</p></li>
 </ul>
 
 <h4>
@@ -57,6 +57,14 @@
 <li><p>Analyzed 24 GB of Hubble Telescope light flux data for over 150,000 star systems using PySpark</p></li>
 <li><p>Fit a non-parametric regression to each star system's light curve using Gaussian and Epanechnikov kernels (bandwidth selected via LOOCV) to produce residual light readings</p></li>
 <li><p>Identified potential binary star systems by detecting systematic trends in the residual light readings </p></li>
+</ul>
+
+<h4>
+<a id="violence-and-perceived-insecurity-consulting-project" class="anchor" href="#violence-and-perceived-insecurity-consulting-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>Violence and Perceived Insecurity (Consulting Project)</h4>
+
+<ul>
+<li><p>Managed a team of graduate students in a statistical consulting project and presented the findings of the analysis to the clients and the statistics department</p></li>
+<li><p>Analyzed how violence shapes the ways individuals view their own security in 25 Colombian cities and discovered clustering schemes for the municipalities using both logistic regression and k-means clustering </p></li>
 </ul>
 
 <hr>
