Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Nathan Vos : Email: nvos@uchicago.edu">
+    <title>Nathan Vos by lyingjumpkick</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Nathan Vos</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Nathan Vos</h1>
+        <p>Email: nvos@uchicago.edu</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/lyingjumpkick">View on GitHub</a>
 
-          <h1 id="project_title">Nathan Vos</h1>
-          <h2 id="project_tagline">Email: nvos@uchicago.edu</h2>
+        <p class="view"><a href="https://github.com/lyingjumpkick">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <p>Welcome! I created this site to showcase some of my past and present projects. I'll be updating this page and my github from time to time with new ones.</p>
 
 <h3>
@@ -34,7 +30,7 @@
 
 <p>I enjoy creating, learning, connecting, and asking questions. I'm fascinated by the unlimited potential of data today and am passionate about discovering new data-driven insights through the use of machine learning tools and proper statistical techniques. I'm looking forward to solving complex problems for a company keen on making well-informed decisions from big data.</p>
 
-<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm certainly no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to create a water slide racing league (similar to the luge, and perfect for the summer Olympics!) and my current, more attainable goal is learning to play the guitar beyond Smoke on the Water.</p>
+<p>When I'm not poring over data, you can probably find me cheering on the <a href="https://www.youtube.com/watch?v=yIcIPd9bDBI">Dolphins</a>, listening to RHCP or Cake, trying to improve my jumper (I'm certainly no Steph Curry), savoring a hoppy IPA (highly recommended: Zombie Dust and IBUsive), or wolfing down a burrito. My pipe dream is to create a water slide racing league (similar to the luge, and perfect for the summer Olympics!) and my current, more attainable goal is learning to play guitar beyond Smoke on the Water.</p>
 
 <hr>
 
@@ -85,16 +81,11 @@
 
 <p>I appreciate your visit and hope you'll return!</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
