Add picture and second page

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header style="text-align: center;"> 
         <h1>Nathan Vos</h1>
-        <p>Email: nvos@uchicago.edu</p>
+        <p>
+          <a href="mailto:nvos@uchicago.edu">nvos@uchicago.edu</a>
+          <br />  
+          <a href="https://github.com/lyingjumpkick"> GitHub Profile</a>
+        </p>
 
-
-        <p class="view"><a href="https://github.com/lyingjumpkick">View My GitHub Profile</a></p>
+        <img src="images/vos1.jpg" style="border-radius: 50%;" />
 
       </header>
       <section>
@@ -74,6 +77,13 @@
 <li><p>Analyzed how violence shapes the ways individuals view their own security in 25 Colombian cities and discovered clustering schemes for the municipalities using both logistic regression and k-means clustering </p></li>
 </ul>
 
+<h4>
+<a href="project1.html">Project #1</a></h4>
+
+<ul>
+<li><p>Whatever</p></li>
+</ul>
+
 <hr>
 
 <h3>
@@ -81,9 +91,6 @@
 
 <p>I appreciate your visit and hope you'll return!</p>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
